--- a/index.html
+++ b/index.html
@@ -251,5 +251,10 @@
       }
     };
   </script>
+  <body>
+  <h1>83-Day Diary Tracker</h1>
+  <div id="calendar"></div>
+  <script src="diary.js"></script> <!-- or put the JS directly here -->
+</body>
 </body>
 </html>
